--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-simple2",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://van-code.github.io/vue-simple2",
+  "homepage": "https://github.io/Van-Code/vue-simple2",
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
